2010-08-10  Kent Tamura  <tkent@chromium.org>

        Unreviewed, build fix.
        
        Chromium build fix for r65107.

        * src/WebAnimationControllerImpl.cpp:
        (WebKit::WebAnimationControllerImpl::suspendAnimations):
        (WebKit::WebAnimationControllerImpl::resumeAnimations):

2010-08-10  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Roll forward Chromium DEPS to r55584
        https://bugs.webkit.org/show_bug.cgi?id=43811

        * DEPS:

2010-08-10  Kavita Kanetkar  <kkanetkar@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: Support appcache status change for Chrome
        https://bugs.webkit.org/show_bug.cgi?id=43531

        * src/ApplicationCacheHost.cpp:
        (WebCore::ApplicationCacheHost::notifyDOMApplicationCache):

2010-08-10  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Use Chromium OpenGL bindings rather than GLEW in WebGraphicsContextDefaultImpl
        https://bugs.webkit.org/show_bug.cgi?id=43754

        Deleted per-platform OpenGL context management code, now
        abstracted via GLContext. Built and tested in Chromium with
        --in-process-webgl flag.

        * WebKit.gyp:
        * src/GraphicsContext3D.cpp:
        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::WebGraphicsContext3DDefaultImpl::WebGraphicsContext3DDefaultImpl):
        (WebKit::WebGraphicsContext3DDefaultImpl::~WebGraphicsContext3DDefaultImpl):
        (WebKit::WebGraphicsContext3DDefaultImpl::initialize):
        (WebKit::WebGraphicsContext3DDefaultImpl::validateAttributes):
        (WebKit::WebGraphicsContext3DDefaultImpl::makeContextCurrent):
        (WebKit::WebGraphicsContext3DDefaultImpl::reshape):
        (WebKit::WebGraphicsContext3DDefaultImpl::readBackFramebuffer):
        (WebKit::WebGraphicsContext3DDefaultImpl::copyTexImage2D):
        (WebKit::WebGraphicsContext3DDefaultImpl::copyTexSubImage2D):