@@ -62,7 +62,6 @@ public:
     virtual void forceRepaint();
     virtual void runtimeFeatureStateChanged(const WebKit::WebString& feature, bool enabled);
     virtual WebKit::WebCString injectedScriptSource();
-    virtual WebKit::WebCString injectedScriptDispatcherSource();
     virtual WebKit::WebCString debuggerScriptSource();
 
     void asyncCall(const DRTDevToolsCallArgs&);
