@@ -1,3 +1,13 @@
+2010-08-11  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: remove InjectDispatch.js
+        https://bugs.webkit.org/show_bug.cgi?id=43835
+
+        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
+        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
+
 2010-08-10  Dirk Pranke  <dpranke@chromium.org>
 
         Reviewed by Eric Seidel.
