@@ -1,3 +1,13 @@
+2010-08-11  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: remove InjectDispatch.js
+        https://bugs.webkit.org/show_bug.cgi?id=43835
+
+        * WebKit.grd:
+        * src/js/InjectDispatch.js: Removed.
+
 2010-08-10  Kent Tamura  <tkent@chromium.org>
 
         Unreviewed, build fix.
